[tool.poetry]
name = "langraph-react-agent"
version = "0.1.0"
description = ""
authors = ["vithushanms <msvithushan@gmail.com>"]
readme = "README.md"
packages = [{include = "langraph_react_agent"}]

[tool.poetry.dependencies]
python = "^3.13"
langchain-community = "^0.3.19"
langgraph = "^0.3.5"
langchain-openai = "^0.3.8"
duckduckgo-search = "^7.5.1"
langchain-core = "^0.3.43"
pygraphviz = "^1.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
